# joycon-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml  clippy.yml  fmt.yml  release.yml  test.yml  test_on_mac.yml  test_on_ubuntu.yml  test_on_windows.yml
examples/: README.md  home_light.rs  player_lights.rs  rumble.rs  scan_for_joycons.rs  simple_hid_report.rs  spi.rs  standard_full_report.rs
src/: joycon.rs  lib.rs  main.rs
src/joycon/: device.rs  driver.rs  manager.rs  mod.rs
src/joycon/driver/: input_report_mode.rs  joycon_features.rs  lights.rs  mod.rs  rumble.rs  simple_joycon_driver.rs
